compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__combo_extern_with_attributes.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Bridge(
            BridgeDecl {
                attrs: [
                    Attribute {
                        is_inner: false,
                        path: [
                            Spanned {
                                node: SymbolU32 {
                                    value: 1,
                                },
                                span: Span {
                                    start: 3,
                                    end: 7,
                                    start_line: 2,
                                    start_col: 3,
                                },
                            },
                        ],
                        args: Some(
                            List(
                                [
                                    KeyValue(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 8,
                                                end: 12,
                                                start_line: 2,
                                                start_col: 8,
                                            },
                                        },
                                        Literal {
                                            kind: String(
                                                "mylib",
                                            ),
                                            span: Span {
                                                start: 15,
                                                end: 22,
                                                start_line: 2,
                                                start_col: 15,
                                            },
                                        },
                                    ),
                                    KeyValue(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 24,
                                                end: 28,
                                                start_line: 2,
                                                start_col: 24,
                                            },
                                        },
                                        Literal {
                                            kind: String(
                                                "static",
                                            ),
                                            span: Span {
                                                start: 31,
                                                end: 39,
                                                start_line: 2,
                                                start_col: 31,
                                            },
                                        },
                                    ),
                                ],
                            ),
                        ),
                        span: Span {
                            start: 1,
                            end: 41,
                            start_line: 2,
                            start_col: 1,
                        },
                    },
                ],
                language: Spanned {
                    node: "C",
                    span: Span {
                        start: 49,
                        end: 52,
                        start_line: 3,
                        start_col: 8,
                    },
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 4,
                    },
                    span: Span {
                        start: 42,
                        end: 48,
                        start_line: 3,
                        start_col: 1,
                    },
                },
                items: [
                    Function(
                        BridgeFn {
                            attrs: [
                                Attribute {
                                    is_inner: false,
                                    path: [
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 5,
                                            },
                                            span: Span {
                                                start: 61,
                                                end: 64,
                                                start_line: 4,
                                                start_col: 7,
                                            },
                                        },
                                    ],
                                    args: Some(
                                        Eq(
                                            Literal {
                                                kind: String(
                                                    "Allocates memory",
                                                ),
                                                span: Span {
                                                    start: 67,
                                                    end: 85,
                                                    start_line: 4,
                                                    start_col: 13,
                                                },
                                            },
                                        ),
                                    ),
                                    span: Span {
                                        start: 59,
                                        end: 86,
                                        start_line: 4,
                                        start_col: 5,
                                    },
                                },
                            ],
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 6,
                                },
                                span: Span {
                                    start: 94,
                                    end: 100,
                                    start_line: 5,
                                    start_col: 8,
                                },
                            },
                            params: [
                                BridgeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 7,
                                        },
                                        span: Span {
                                            start: 101,
                                            end: 105,
                                            start_line: 5,
                                            start_col: 15,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 8,
                                                            },
                                                            span: Span {
                                                                start: 107,
                                                                end: 112,
                                                                start_line: 5,
                                                                start_col: 21,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 107,
                                                    end: 112,
                                                    start_line: 5,
                                                    start_col: 21,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 107,
                                            end: 112,
                                            start_line: 5,
                                            start_col: 21,
                                        },
                                    },
                                    ownership: None,
                                    span: Span {
                                        start: 101,
                                        end: 112,
                                        start_line: 5,
                                        start_col: 15,
                                    },
                                },
                            ],
                            is_variadic: false,
                            return_type: Some(
                                Type {
                                    kind: Pointer {
                                        mutable: true,
                                        inner: Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 9,
                                                                },
                                                                span: Span {
                                                                    start: 122,
                                                                    end: 124,
                                                                    start_line: 5,
                                                                    start_col: 36,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 122,
                                                        end: 124,
                                                        start_line: 5,
                                                        start_col: 36,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 122,
                                                end: 124,
                                                start_line: 5,
                                                start_col: 36,
                                            },
                                        },
                                    },
                                    span: Span {
                                        start: 117,
                                        end: 124,
                                        start_line: 5,
                                        start_col: 31,
                                    },
                                },
                            ),
                            span: Span {
                                start: 91,
                                end: 125,
                                start_line: 5,
                                start_col: 5,
                            },
                        },
                    ),
                    Function(
                        BridgeFn {
                            attrs: [],
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 10,
                                },
                                span: Span {
                                    start: 134,
                                    end: 138,
                                    start_line: 7,
                                    start_col: 8,
                                },
                            },
                            params: [
                                BridgeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 11,
                                        },
                                        span: Span {
                                            start: 139,
                                            end: 142,
                                            start_line: 7,
                                            start_col: 13,
                                        },
                                    },
                                    ty: Type {
                                        kind: Pointer {
                                            mutable: true,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 9,
                                                                    },
                                                                    span: Span {
                                                                        start: 149,
                                                                        end: 151,
                                                                        start_line: 7,
                                                                        start_col: 23,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 149,
                                                            end: 151,
                                                            start_line: 7,
                                                            start_col: 23,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 149,
                                                    end: 151,
                                                    start_line: 7,
                                                    start_col: 23,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 144,
                                            end: 151,
                                            start_line: 7,
                                            start_col: 18,
                                        },
                                    },
                                    ownership: None,
                                    span: Span {
                                        start: 139,
                                        end: 151,
                                        start_line: 7,
                                        start_col: 13,
                                    },
                                },
                            ],
                            is_variadic: false,
                            return_type: None,
                            span: Span {
                                start: 131,
                                end: 153,
                                start_line: 7,
                                start_col: 5,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 42,
                    end: 155,
                    start_line: 3,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 155,
        start_line: 2,
        start_col: 1,
    },
}
