compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_empty_enum.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Enum(
            EnumDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 5,
                        end: 10,
                        start_line: 1,
                        start_col: 6,
                    },
                },
                type_params: None,
                variants: [],
                span: Span {
                    start: 0,
                    end: 13,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 13,
        start_line: 1,
        start_col: 1,
    },
}
